--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-static-gzip": "^2.1.1",
-    "node-zopfli-es": "^1.0.7",
-    "shrink-ray-current": "^4.1.2",
+    "ip-range-check": "^0.2.0",
     "spdy": "^4.0.2"
   },
   "devDependencies": {
     "@types/connect-history-api-fallback": "^1.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
+    "@types/express": "^4.17.9",
+    "@types/spdy": "^3.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.17.0",
     "typescript": "^4.1.3"
   },
