--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_server",
+  "name": "web-server",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -15,15 +15,15 @@
   "devDependencies": {
     "@types/connect-history-api-fallback": "^1.3.3",
     "@types/express": "^4.17.9",
+    "@types/gulp": "^4.0.7",
     "@types/spdy": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "del": "^6.0.0",
     "eslint": "^7.17.0",
+    "gulp": "^4.0.2",
     "typescript": "^4.1.3"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Jaeiya",
   "license": "ISC"
 }
