--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/spdy": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "argon2": "^0.27.1",
     "del": "^6.0.0",
     "eslint": "^7.18.0",
     "gulp": "^4.0.2",
