--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "express-session": "^1.17.1",
     "express-static-gzip": "^2.1.1",
     "ip-range-check": "^0.2.0",
+    "nodemailer": "^6.4.18",
     "spdy": "^4.0.2"
   },
   "devDependencies": {
     "@types/connect-history-api-fallback": "^1.3.3",
     "@types/express": "^4.17.11",
     "@types/gulp": "^4.0.8",
+    "@types/nodemailer": "^6.4.0",
     "@types/spdy": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
